# epd-calendar

./: CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/epd/: CMakeLists.txt  epd_panel_io.c  epd_panel_io_spi.c  epd_panel_ops.c  gdey075.c
components/epd/include/: epd_panel_io.h  epd_panel_ops.h
components/epd/include/internal/: epd_panel_interface.h  gdey075.h
components/freetype/: CMakeLists.txt
components/freetype/freetype/: CMakeLists.txt
components/littlefs/: idf_component.yml
components/littlefs/mklittlefs/: Makefile
components/lvgl/: .component_hash  idf_component.yml  lv_conf.h
components/lvgl/env_support/cmake/: esp.cmake
components/sht30/: CMakeLists.txt  sht30.c  sht30.h
flash_data/web/: index.html
flash_data/web/css/: style.css
main/: CMakeLists.txt  app_main.c  idf_component.yml
main/assets/: clock_bkg.c  font_dseg.c  font_dseg_big.c  hour_hand.c  icon.c  minute_hand.c  weather_icon.c
main/cloud/: app_cloud.c  app_cloud.h
main/common/: common.c  common.h  date.c  date.h  solar_term.c  solar_term.h
main/drivers/: lv_port_indev.c
main/http/: http_server.c  http_server.h
main/misc/: RTC_RX8025T.cpp  app_bat.c  app_bat.h  app_key.c  app_key.h  app_nvs.c  app_nvs.h  app_wifi.c  app_wifi.h
main/ui_lvgl/: lvgl_calendar.c  lvgl_calendar.h  scr_analogue_clock.c  scr_calendar.c  scr_dig_clock.c  scr_home.c  scr_wifi.c  status_bar.c  status_bar.h  ui_epd.c  ui_epd.h
